--- a/styles/payment.css
+++ b/styles/payment.css
@@ -1,13 +1,24 @@
 body {
     height: 100%;
     width: 100%;
+    background-color: #e0e0e0;
+    margin: 0%;
 }
 
 header img {
     height: 60px;
     width: 60px;
 }
-#content img {
+#content {
+    margin-top: 2%;
+    margin-bottom: 2%;
+    background-color: rgb(132,136,139);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+#content img{
     height: 500px;
     width: 500px;
 }
@@ -15,4 +26,21 @@ header img {
 footer img {
     height: 20px;
     width: 22px;
+}
+header {
+    background-color: rosybrown;
+}
+footer {
+    background-color: rosybrown;
+}
+#customer {
+    margin: 2% 2% 2% 2%;
+}
+#detail {
+    margin: 2% 2% 2% 2%;
+    width: 1240px;
+    height: 100px;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 1% 2% 1% 2%;
 }
