--- a/styles/list.css
+++ b/styles/list.css
@@ -3,12 +3,26 @@ body {
     width: 100%;
     margin: 0px;
     background-color: #e0e0e0;
+    font-family: 'Ubuntu', sans-serif;
 }
 
-header img {
-    height: 60px;
+.logo {
     width: 60px;
+    height: 60px;
 }
+#logo {
+    float: left;
+    height: 100%;
+}
+.login {
+    text-decoration: none;
+    line-height: 60px;
+}
+#login {
+    float: right;
+    height: 100%;
+}
+
 article #content img {
     height: 200px;
     width: 250px;
@@ -20,28 +34,77 @@ footer img {
 }
 header {
     background-color: rosybrown;
+    position: fixed;
+    width: 100%;
+    top: 0;
+}
+#header {
+    height: 60px;
+}
+
+#content table {
+    width: 100%;
+}
+#content table tr td {
+    background-color: rgb(132,136,139);
 }
 footer {
     background-color: rosybrown;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    height: 60px;
 }
-article #img1 {
-    margin: 2%;
-    width: 40%;
-    background-color: rgb(132,136,139);
+article {
+    margin-top: 60px;
 }
-article #img2 {
-    margin: 2%;
-    width: 40%;
-    background-color: rgb(132,136,139);
+article div#nav {
+    text-align: center;
 }
-article #img3 {
-    margin: 2%;
-    width: 40%;
-    background-color: rgb(132,136,139);
+article ul {
+    list-style-type: none;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
 }
- content #map {
+article ul li {
+    display: block;
+    float: left;
+    text-align: center;
+    padding: 15px;
+}
+article ul li a {
+    text-decoration: none;
+}
+article div#content table {
+    border-spacing: 75px;
+}
+#map {
     height: 200px;
     width: 250px;
+    display: none;
 }
-
-
+footer p {
+    text-align: center;
+    font-size: 10px;
+    vertical-align: bottom;
+}
+footer #media {
+    float: right;
+    vertical-align: middle;
+    height: 100%;
+}
+footer div#contact {
+    float: left;
+    line-height: 60px;
+}
+#contact a{
+    vertical-align: middle;
+    text-decoration: none;
+}
+footer #media a {
+    line-height: 60px;
+ }
+div#copy {
+    line-height: 60px;
+}
