--- a/styles/payment.css
+++ b/styles/payment.css
@@ -3,12 +3,46 @@ body {
     width: 100%;
     background-color: #e0e0e0;
     margin: 0%;
+    font-family: 'Ubuntu', sans-serif;
+}
+header {
+    background-color: rosybrown;
+    position: fixed;
+    width: 100%;
+    top: 0;
+}
+#header {
+    height: 60px;
 }
 
 header img {
     height: 60px;
     width: 60px;
 }
+.logo {
+    width: 60px;
+    height: 60px;
+}
+#logo {
+    float: left;
+    height: 100%;
+}
+.login {
+    text-decoration: none;
+    line-height: 60px;
+}
+#login {
+    float: right;
+    height: 100%;
+}
+article {
+    margin-top: 80px;
+    margin-bottom: 100px;
+}
+article a {
+    text-decoration: none;
+}
+
 #content {
     margin-top: 2%;
     margin-bottom: 2%;
@@ -27,11 +61,13 @@ footer img {
     height: 20px;
     width: 22px;
 }
-header {
-    background-color: rosybrown;
-}
+
 footer {
     background-color: rosybrown;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    height: 60px;
 }
 #customer {
     margin: 2% 2% 2% 2%;
@@ -43,4 +79,28 @@ footer {
     border: 1px solid black;
     border-radius: 5px;
     padding: 1% 2% 1% 2%;
+}
+footer p {
+    text-align: center;
+    font-size: 10px;
+    vertical-align: bottom;
+}
+footer #media {
+    float: right;
+    vertical-align: middle;
+    height: 100%;
+}
+footer div#contact {
+    float: left;
+    line-height: 60px;
+}
+#contact a{
+    vertical-align: middle;
+    text-decoration: none;
+}
+footer #media a {
+    line-height: 60px;
+ }
+div#copy {
+    line-height: 60px;
 }
