--- a/styles/detail.css
+++ b/styles/detail.css
@@ -1,9 +1,38 @@
 body {
+    margin: 0px;
+    background-color: #e0e0e0;
     height: 100%;
     width: 100%;
-    margin: 0px 0px 0px 0px;
-    background-color: #e0e0e0;
     font-family: 'Ubuntu', sans-serif;
+    display: flex;
+    flex-direction: row;
+}
+header {
+    display: flex;
+    flex-direction: row;
+}
+header #logo {
+    flex: 1;
+}
+header #login {
+    flex: 1;
+    text-align: right;
+}
+footer {
+    display: flex;
+    flex-direction: row;
+}
+footer #contact {
+    flex: 1;
+}
+footer #copy {
+    text-align: center;
+    font-size: 10px;
+    flex: 1;
+}
+footer #media {
+    text-align: right;
+    flex: 1;
 }
 .logo {
     width: 60px;
@@ -49,10 +78,6 @@ footer {
 header {
     background-color: rosybrown;
 }
-article img {
-    margin-top: 2%;
-    margin-left: 4%;
-}
 article {
     margin-top: 60px;
 }
@@ -60,9 +85,6 @@ article #form {
     margin-left: 4%;
     margin-right: 4%;
     margin-bottom: 2%;
-}
-article #detail {
-    margin: 1% 4% 2% 4%;
 }
 footer p {
     text-align: center;
@@ -87,4 +109,54 @@ footer #media a {
  }
 div#copy {
     line-height: 60px;
+}
+article {
+    display: flex;
+    flex-direction: column;
+}
+article > div {
+    display: flex;
+    margin: 1%;
+    padding: 1%;
+}
+article > div:nth-child(1) > div {
+    display: flex;
+    border: 1px solid black;
+    align-items: center;
+    justify-content: center;
+}
+article > div > div img {
+    height: 350px;
+    padding: 15px 0;
+}
+article > div:nth-child(1) > div:nth-child(1) {
+    flex: 3;
+}
+article > div:nth-child(1) > div:nth-child(2) {
+    flex: 1;
+}
+#booking-form form {
+    width: 100%;
+}
+.outer {
+    padding: 6% 5%;
+    display: flex;
+    justify-content: space-between;
+}
+#book-now {
+    margin-top: 5%;
+}
+.inner {
+    width: 60%;
+}
+#booking-form form div:nth-child(6) {
+    text-align: center;
+}
+article > div:nth-child(2) {
+    flex-direction: column;
+    margin-bottom: 70px;
+}
+article > div:nth-child(2) h5 {
+    font-weight: bold;
+    font-family: cursive;
 }
