--- a/styles/index.css
+++ b/styles/index.css
@@ -4,8 +4,60 @@ body {
     height: 100%;
     width: 100%;
     font-family: 'Ubuntu', sans-serif;
+    display: flex;
+    flex-direction: row;
+}
+header {
+    display: flex;
+    flex-direction: row;
+}
+header #logo {
+    flex: 1;
+}
+header #login {
+    flex: 1;
+    text-align: right;
+}
+footer {
+    display: flex;
+    flex-direction: row;
+}
+footer #contact {
+    flex: 1;
+}
+footer #copy {
+    text-align: center;
+    font-size: 10px;
+    flex: 1;
+}
+footer #media {
+    text-align: right;
+    flex: 1;
+}
+.name {
+    position: absolute;
+    top: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    text-align: center;
+    border-radius: 25%;
+}
+article #content img:hover {
+    opacity: 0.3;
+}
+article #content img:hover .name {
+    opacity: 1;
+}
+article {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 article #city {
+    width: 100%;
     height: 380px;
     background: transparent url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg") no-repeat center;
     background-size: cover;
@@ -30,14 +82,9 @@ article #city {
 article img {
     width: 150px;
     height: 150px;
-    padding: 4% 4% 4% 4%;
-    justify-content: space-between;
-    border-radius: 25%;
-   
-}
-#img{
-    padding-left: 15%;
-    padding-right: 15%;
+    margin: 4% 4% 4% 4%;
+    justify-content: space-evenly;
+    border-radius: 25%; 
 }
 
 footer img {
@@ -69,6 +116,7 @@ footer {
 }
 
 #city input {
+    border: 1px solid transparent;
     position: absolute;
     top: 55%;
     left: 50%;
@@ -77,13 +125,9 @@ footer {
     font-size: 16px;
     width: 20%;
     border-radius: 12px;
+    outline: 0;
 }
 
-footer p {
-    text-align: center;
-    font-size: 10px;
-    vertical-align: bottom;
-}
 footer #media {
     float: right;
     vertical-align: middle;
@@ -107,4 +151,36 @@ line-height: 60px;
 }
 div#copy {
     line-height: 60px;
+}
+
+.city-cards {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 4% 0%;
+}
+.city-image{
+    height: 150px;
+    width: 150px;
+    border-radius: 25%;
+    box-shadow: 10px 10px 10px grey;
+}
+.city-card-and-name-inner {
+    position: relative;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    color: #f1f1f1;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    text-align: center;
+    border-radius: 25%;
+}
+.city-card-and-name-inner:hover .overlay {
+    opacity: 1;
+}
+.overlay span {
+    position:relative;
+    top:45%;
 }
