--- a/styles/list.css
+++ b/styles/list.css
@@ -1,9 +1,38 @@
 body {
-    height: 100%;
-    width: 100%;
     margin: 0px;
     background-color: #e0e0e0;
+    height: 100%;
+    width: 100%;
     font-family: 'Ubuntu', sans-serif;
+    display: flex;
+    flex-direction: row;
+}
+header {
+    display: flex;
+    flex-direction: row;
+}
+header #logo {
+    flex: 1;
+}
+header #login {
+    flex: 1;
+    text-align: right;
+}
+footer {
+    display: flex;
+    flex-direction: row;
+}
+footer #contact {
+    flex: 1;
+}
+footer #copy {
+    text-align: center;
+    font-size: 10px;
+    flex: 1;
+}
+footer #media {
+    text-align: right;
+    flex: 1;
 }
 
 .logo {
@@ -107,4 +136,35 @@ footer #media a {
  }
 div#copy {
     line-height: 60px;
+}
+
+article {
+    width: 100%;
+}
+article #content {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 6%;
+}
+article #content > div {
+    margin: 4% 5% 0% 5%; 
+    background-color: lightgrey;
+    width: 40%;
+    float: left;
+    display: flex;
+    justify-content: start;
+    align-content: center;
+    max-height: 200px;
+}
+article #content > div a {
+    display: flex;
+    width: 100%;
+    text-decoration: none;
+    color: black;
+}
+article #content > div a > div {
+    flex: 1;
+}
+article #content > div a > div div {
+margin: 20px 0;
 }
