--- a/styles/detail.css
+++ b/styles/detail.css
@@ -9,74 +9,43 @@ body {
 }
 header {
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    background-color: rosybrown;
+    position: fixed;
+    width: 100%;
+}
+header .logo {
+    width: 60px;
+    height: 60px;
 }
 header #logo {
     flex: 1;
 }
 header #login {
     flex: 1;
-    text-align: right;
 }
 footer {
     display: flex;
-    flex-direction: row;
-}
-footer #contact {
-    flex: 1;
-}
-footer #copy {
-    text-align: center;
-    font-size: 10px;
-    flex: 1;
-}
-footer #media {
-    text-align: right;
-    flex: 1;
-}
-.logo {
-    width: 60px;
-    height: 60px;
-}
-#logo {
-    float: left;
-    height: 100%;
-}
-.login {
-    text-decoration: none;
-    line-height: 60px;
-}
-#login {
-    float: right;
-    height: 100%;
-}
-
-header {
-    background-color: rosybrown;
-    position: fixed;
-    width: 100%;
-    top: 0;
-}
-#header {
-    height: 60px;
-}
-article img {
-    height: 500px;
-    width: 500px;
-}
-footer img {
-    height: 20px;
-    width: 22px;
-}
-footer {
+    align-items: center;
     background-color: rosybrown;
     position: fixed;
     width: 100%;
     bottom: 0;
     height: 60px;
 }
-header {
-    background-color: rosybrown;
+footer > div {
+    flex: 1;
+}
+footer #copy {
+    text-align: center;
+    font-size: 10px;
+}
+footer #media {
+    text-align: right;
+}
+footer img {
+    height: 20px;
+    width: 22px;
 }
 article {
     margin-top: 60px;
@@ -85,30 +54,6 @@ article #form {
     margin-left: 4%;
     margin-right: 4%;
     margin-bottom: 2%;
-}
-footer p {
-    text-align: center;
-    font-size: 10px;
-    vertical-align: bottom;
-}
-footer #media {
-    float: right;
-    vertical-align: middle;
-    height: 100%;
-}
-footer div#contact {
-    float: left;
-    line-height: 60px;
-}
-#contact a{
-    vertical-align: middle;
-    text-decoration: none;
-}
-footer #media a {
-    line-height: 60px;
- }
-div#copy {
-    line-height: 60px;
 }
 article {
     display: flex;
@@ -139,7 +84,7 @@ article > div:nth-child(1) > div:nth-child(2) {
     width: 100%;
 }
 .outer {
-    padding: 6% 5%;
+    padding: 3% 5%;
     display: flex;
     justify-content: space-between;
 }
@@ -159,4 +104,14 @@ article > div:nth-child(2) {
 article > div:nth-child(2) h5 {
     font-weight: bold;
     font-family: cursive;
+}
+#login-form {
+    display: flex;
+    flex-direction: column;
+}
+.login-field {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2%;
 }
