--- a/styles/list.css
+++ b/styles/list.css
@@ -9,83 +9,61 @@ body {
 }
 header {
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    background-color: rosybrown;
+    position: fixed;
+    width: 100%;
+}
+header .logo {
+    width: 60px;
+    height: 60px;
 }
 header #logo {
     flex: 1;
 }
 header #login {
     flex: 1;
-    text-align: right;
 }
 footer {
     display: flex;
-    flex-direction: row;
-}
-footer #contact {
-    flex: 1;
-}
-footer #copy {
-    text-align: center;
-    font-size: 10px;
-    flex: 1;
-}
-footer #media {
-    text-align: right;
-    flex: 1;
-}
-
-.logo {
-    width: 60px;
-    height: 60px;
-}
-#logo {
-    float: left;
-    height: 100%;
-}
-.login {
-    text-decoration: none;
-    line-height: 60px;
-}
-#login {
-    float: right;
-    height: 100%;
-}
-
-article #content img {
-    height: 200px;
-    width: 250px;
-}
-
-footer img {
-    height: 20px;
-    width: 22px;
-}
-header {
-    background-color: rosybrown;
-    position: fixed;
-    width: 100%;
-    top: 0;
-}
-#header {
-    height: 60px;
-}
-
-#content table {
-    width: 100%;
-}
-#content table tr td {
-    background-color: rgb(132,136,139);
-}
-footer {
+    align-items: center;
     background-color: rosybrown;
     position: fixed;
     width: 100%;
     bottom: 0;
     height: 60px;
 }
+footer > div {
+    flex: 1;
+}
+footer #copy {
+    text-align: center;
+    font-size: 10px;
+}
+footer #media {
+    text-align: right;
+}
+footer img {
+    height: 20px;
+    width: 22px;
+}
+article #content img {
+    height: 200px;
+    width: 250px;
+}
+footer img {
+    height: 20px;
+    width: 22px;
+}
+#content table {
+    width: 100%;
+}
+#content table tr td {
+    background-color: rgb(132,136,139);
+}
 article {
     margin-top: 60px;
+    margin-bottom: 80px;
 }
 article div#nav {
     text-align: center;
@@ -111,29 +89,12 @@ article div#content table {
 #map {
     height: 200px;
     width: 250px;
-    display: none;
 }
-footer p {
-    text-align: center;
-    font-size: 10px;
-    vertical-align: bottom;
-}
-footer #media {
-    float: right;
-    vertical-align: middle;
-    height: 100%;
-}
-footer div#contact {
-    float: left;
-    line-height: 60px;
-}
+
 #contact a{
     vertical-align: middle;
     text-decoration: none;
 }
-footer #media a {
-    line-height: 60px;
- }
 div#copy {
     line-height: 60px;
 }
@@ -142,9 +103,7 @@ article {
     width: 100%;
 }
 article #content {
-    display: flex;
     flex-wrap: wrap;
-    margin-bottom: 6%;
 }
 article #content > div {
     margin: 4% 5% 0% 5%; 
@@ -166,5 +125,22 @@ article #content > div a > div {
     flex: 1;
 }
 article #content > div a > div div {
-margin: 20px 0;
+    margin: 20px 0;
+}
+
+#login-form {
+    display: flex;
+    flex-direction: column;
+}
+.login-field {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2%;
+}
+#pills-tab {
+    justify-content: center;
+}
+#content > div:hover {
+    background-color: rosybrown;
 }
