--- a/styles/loader.css
+++ b/styles/loader.css
@@ -4,6 +4,8 @@
     border: 12px solid #f3f3f3;
     border-top: 12px solid  #444444;
     border-radius: 50%;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
 }
 .loader {
     display: block;
@@ -12,4 +14,12 @@
 }
 .loader:hover {
     transform: scale(1.1);
+}
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
