--- a/styles/payment.css
+++ b/styles/payment.css
@@ -9,60 +9,43 @@ body {
 }
 header {
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    background-color: rosybrown;
+    position: fixed;
+    width: 100%;
+}
+header .logo {
+    width: 60px;
+    height: 60px;
 }
 header #logo {
     flex: 1;
 }
 header #login {
     flex: 1;
-    text-align: right;
 }
 footer {
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    background-color: rosybrown;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    height: 60px;
 }
-footer #contact {
+footer > div {
     flex: 1;
 }
 footer #copy {
     text-align: center;
     font-size: 10px;
-    flex: 1;
 }
 footer #media {
     text-align: right;
-    flex: 1;
 }
-header {
-    background-color: rosybrown;
-    position: fixed;
-    width: 100%;
-    top: 0;
-}
-#header {
-    height: 60px;
-}
-
-header img {
-    height: 60px;
-    width: 60px;
-}
-.logo {
-    width: 60px;
-    height: 60px;
-}
-#logo {
-    float: left;
-    height: 100%;
-}
-.login {
-    text-decoration: none;
-    line-height: 60px;
-}
-#login {
-    float: right;
-    height: 100%;
+footer img {
+    height: 20px;
+    width: 22px;
 }
 article {
     width: 100%;
@@ -71,7 +54,6 @@ article {
 article a {
     text-decoration: none;
 }
-
 #content {
     margin-top: 2%;
     margin-bottom: 2%;
@@ -85,19 +67,6 @@ article a {
     height: 500px;
     width: 500px;
 }
-
-footer img {
-    height: 20px;
-    width: 22px;
-}
-
-footer {
-    background-color: rosybrown;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    height: 60px;
-}
 #customer {
     margin: 2% 2% 2% 2%;
 }
@@ -108,30 +77,6 @@ footer {
     border: 1px solid black;
     border-radius: 5px;
     padding: 1% 2% 1% 2%;
-}
-footer p {
-    text-align: center;
-    font-size: 10px;
-    vertical-align: bottom;
-}
-footer #media {
-    float: right;
-    vertical-align: middle;
-    height: 100%;
-}
-footer div#contact {
-    float: left;
-    line-height: 60px;
-}
-#contact a{
-    vertical-align: middle;
-    text-decoration: none;
-}
-footer #media a {
-    line-height: 60px;
- }
-div#copy {
-    line-height: 60px;
 }
 #payment-container {
     margin-top:7%;
@@ -151,7 +96,6 @@ div#copy {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    padding: 2%;
     border: black 1px solid;
     border-radius: 5px;
     margin: 0% 2%;
@@ -167,4 +111,14 @@ div#copy {
 }
 .hotel-name-rating {
     margin-left: 25px;
+}
+#login-form {
+    display: flex;
+    flex-direction: column;
+}
+.login-field {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2%;
 }
