--- a/styles/detail.css
+++ b/styles/detail.css
@@ -115,3 +115,91 @@ article > div:nth-child(2) h5 {
     align-items: center;
     padding: 2%;
 }
+.score-wrap {
+    display: inline-block;
+    position: relative;
+    height: 19px;
+}
+.score .stars-active {
+    color: orange;
+    position: relative;
+    z-index: 10;
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.score .stars-inactive {
+    color: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-text-stroke: initial;
+    /* overflow: hidden; */
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  background-image: none;
+}
+.carousel-control-next-icon:after
+{
+  content: '>';
+  font-size: 55px;
+  color: rosybrown;
+}
+
+#slideshow-container {
+    padding: 1%;
+    text-align: center;
+    border: 1px solid black;
+    max-height: 400px;
+}
+#slideshow-container {
+    margin-left: 2%;
+    border-right: none;
+    flex-grow: 3;
+    max-width: 60%;
+}
+
+#slideshow-booking {
+    display: flex;
+    justify-content: start;
+    align-content: center;
+}
+.slider-image {
+    max-height: 350px;
+}
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 55px;
+  color: rosybrown;
+}
+
+.carousel-control-next,
+.carousel-control-prev {
+    z-index: 0;
+}
+.carousel-control-prev {
+    left: -120px;
+}
+.carousel-control-next {
+    right: -120px;
+}
+.carousel-image {
+    max-height: 370px;
+}
+#slideshow-container, #booking-form {
+    padding: 1%;
+    text-align: center;
+    border: 1px solid black;
+    max-height: 400px;
+}
+#slideshow-container {
+    margin-left: 2%;
+    border-right: none;
+    flex-grow: 3;
+    max-width: 60%;
+}
