--- a/styles/index.css
+++ b/styles/index.css
@@ -1,117 +1,66 @@
-body {
-    margin: 0px;
-    background-color: #e0e0e0;
+* {
+    font-family: 'Ubuntu', sans-serif;
+}
+html, body {
     height: 100%;
     width: 100%;
-    font-family: 'Ubuntu', sans-serif;
+    margin: 0;
+    background-color: #e0e0e0;  
+}
+.header-footer {
+    background-color:rosybrown;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 header {
-    display: flex;
-    align-items: center;
-    background-color: rosybrown;
-    position: fixed;
-    width: 100%;
-}
-header .logo {
-    width: 60px;
-    height: 60px;
-}
-header #logo {
-    flex: 1;
-}
-header #login {
-    flex: 1;
+    top: 0;  
 }
 footer {
-    display: flex;
-    align-items: center;
-    background-color: rosybrown;
-    position: fixed;
-    width: 100%;
+    padding:0.7%;
     bottom: 0;
-    height: 60px;
 }
-footer > div {
-    flex: 1;
+#login {
+    margin-right: 2%;
 }
-footer #copy {
-    text-align: center;
-    font-size: 10px;
+#contact {
+    margin-left: 2%;
 }
-footer #media {
+#social-media-images {
+    margin-right: 2%;
     text-align: right;
 }
-footer img {
+#copyright-text {
+    font-size: 10px;
+    text-align: center;
+}
+.social-media-image {
     height: 20px;
     width: 22px;
 }
-.name {
-    position: absolute;
-    top: 0;
-    background: rgba(0, 0, 0, 0.5);
-    color: #f1f1f1;
-    width: 100%;
+#logo-image {
     height: 100%;
-    opacity: 0;
-    text-align: center;
-    border-radius: 25%;
+    width: 60px;
 }
-article #content img:hover {
-    opacity: 0.3;
+.logo {
+    margin-left: 1%;
 }
-article #content img:hover .name {
-    opacity: 1;
-}
-article {
+#login-form {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    margin-bottom: 50px;
 }
-article #city {
-    width: 100%;
-    height: 380px;
-    background: transparent url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg") no-repeat center;
-    background-size: cover;
-}
-article img {
-    width: 150px;
-    height: 150px;
-    margin: 4% 4% 4% 4%;
+.login-field {
+    display: flex;
     justify-content: space-evenly;
-    border-radius: 25%; 
+    align-items: center;
+    padding: 2%;
 }
-#city {
-    background-color: #f1f1f1;
-    color: transparent;
-    text-align: center;
-    vertical-align: middle;
-}
-#city input {
-    border: 1px solid transparent;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 10px;
-    font-size: 16px;
-    width: 20%;
-    border-radius: 12px;
-    outline: 0;
-}
-
-#contact a{
-    vertical-align: middle;
-    text-decoration: none;
-}
-#content{
-    height: 350px;
-    text-align: center;
-}
-div#copy {
-    line-height: 60px;
+#index-container {
+    display: flex;
+    flex-direction: column;
 }
 .city-cards {
     display: flex;
@@ -127,9 +76,36 @@ div#copy {
 .city-card-and-name-inner {
     position: relative;
 }
+#banner{
+    background-image: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
+    height: 380px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+#search-bar {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 25%;
+}
+#search-input {
+    border: 1px solid transparent;
+    background-color: #f1f1f1;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 12px;
+    width: 100%;
+}
+#search-input:focus {
+    outline: none;
+}
 .overlay {
     position: absolute;
     top: 0;
+    background: rgba(0, 0, 0, 0.5);
     color: #f1f1f1;
     width: 100%;
     height: 100%;
@@ -144,13 +120,65 @@ div#copy {
     position:relative;
     top:45%;
 }
-#login-form {
+#view-more {
+    margin-bottom:7%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
 }
-.login-field {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 2%;
+#view-more-city-cards {
+    display: none;
+}
+.search-items {
+    border: 1px solid #d4d4d4;
+    z-index: 99;
+    width: 100%;
+}
+.search-items div{
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff; 
+    border-bottom: 1px solid #d4d4d4; 
+    border-radius: 12px;
+}
+.search-items div:hover {
+    background-color: #e9e9e9; 
+}
+.search-active {
+    background-color: DodgerBlue !important; 
+    color: #ffffff; 
+}
+@media screen and (max-width: 576px) {
+    #search-bar {
+        width: 60%;
+    }
+    .city-cards {
+        flex-direction: column;
+        margin: auto;
+    }
+    .city-image{
+        height: 200px;
+        width: 200px;
+    }
+    .city-card-and-name-inner {
+        padding: 4% 0%;
+    }
+    #view-more {
+        margin-bottom:20%;
+    }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+    #search-bar {
+        width: 60%;
+    }
+    .city-cards {
+        flex-wrap: wrap;
+        margin: auto;
+    }
+    .city-image{
+        height: 250px;
+        width: 260px;
+    }
+    .city-card-and-name-inner {
+        padding: 4% 0%;
+    }
 }
