--- a/styles/payment.css
+++ b/styles/payment.css
@@ -1,88 +1,52 @@
-body {
-    margin: 0px;
-    background-color: #e0e0e0;
+* {
+    font-family: 'Ubuntu', sans-serif;
+}
+html, body {
     height: 100%;
     width: 100%;
-    font-family: 'Ubuntu', sans-serif;
+    margin: 0;
+    background-color: #e0e0e0;  
+}
+.header-footer {
+    background-color:rosybrown;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 header {
-    display: flex;
-    align-items: center;
-    background-color: rosybrown;
-    position: fixed;
-    width: 100%;
-}
-header .logo {
-    width: 60px;
-    height: 60px;
-}
-header #logo {
-    flex: 1;
-}
-header #login {
-    flex: 1;
+    top: 0;  
 }
 footer {
-    display: flex;
-    align-items: center;
-    background-color: rosybrown;
-    position: fixed;
-    width: 100%;
+    padding:0.7%;
     bottom: 0;
-    height: 60px;
 }
-footer > div {
-    flex: 1;
+#login {
+    margin-right: 2%;
 }
-footer #copy {
-    text-align: center;
-    font-size: 10px;
+#contact {
+    margin-left: 2%;
 }
-footer #media {
+#social-media-images {
+    margin-right: 2%;
     text-align: right;
 }
-footer img {
+#copyright-text {
+    font-size: 10px;
+    text-align: center;
+}
+.social-media-image {
     height: 20px;
     width: 22px;
 }
-article {
-    width: 100%;
-    margin-bottom: 100px;
+#logo-image {
+    height: 100%;
+    width: 60px;
 }
-article a {
-    text-decoration: none;
-}
-#content {
-    margin-top: 2%;
-    margin-bottom: 2%;
-    background-color: rgb(132,136,139);
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-#content img{
-    height: 500px;
-    width: 500px;
-}
-#customer {
-    margin: 2% 2% 2% 2%;
-}
-#detail {
-    margin: 2% 2% 2% 2%;
-    width: 1240px;
-    height: 100px;
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 1% 2% 1% 2%;
-}
-#payment-container {
-    margin-top:7%;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
+.logo {
+    margin-left: 1%;
 }
 #hotel-details {
     background-color: rgb(132, 136, 139);
@@ -92,25 +56,60 @@ article a {
     display: flex;
     align-items: center;
 }
-#customer-payment-details {
+#payment-container {
+    margin-top:7%;
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    border: black 1px solid;
-    border-radius: 5px;
-    margin: 0% 2%;
-    background-color: rosybrown;
+    flex-direction: column;
+    align-content: center;
 }
 .hotel-image {
     max-height: 300px;
     max-width: 270px;
 }
-#customer-payment-details p label:nth-child(1) {
-    font-weight: bold;
-    font-family: cursive;
+#customer-payment-details {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 2%;
+    border: black 1px solid;
+    border-radius: 5px;
+    margin: 0% 2%;
+    background-color: rosybrown;
 }
-.hotel-name-rating {
-    margin-left: 25px;
+@media screen and (max-width: 576px) {
+    #hotel-details {
+        width: 100%;
+        flex-direction: column;
+        padding-top: 10px;
+    }
+
+    #payment-container {
+        margin-top: 20%;
+        margin-bottom: 20%;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+    }
+
+    #pay-now{
+        align-self: center;
+    }
+
+    #customer-payment-details {
+        align-items: normal;
+        flex-direction: column;
+        padding: 15px;
+    }
+
+    .hotel-name-rating {
+        text-align: center;
+    }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+    #hotel-details {
+        width: 80%;
+        margin: 5% auto;
+    }
 }
 #login-form {
     display: flex;
